# pydantic-typer

./: .gitignore  .gitmodules  LICENSE.txt  README.md  pyproject.toml  ruff_defaults.toml
.github/workflows/: ci.yml
docs/: README.template.md
examples/: example_001_basic.py  example_002_nested_models.py  example_002_sub_models.py  example_003_annotated_argument.py  example_004_argument_override.py  example_005_multi_commands.py  example_006_pydantic_types.py
examples/pydantic_models/: example_001_basic.py  example_001_basic_an.py  example_002_nested_models.py  example_003_annotated_argument.py  example_004_argument_override.py  example_005_multi_commands.py  example_008_lists_of_models.py
examples/pydantic_types/: example_006_pydantic_types.py  example_007_list_pydantic_types.py  example_009_union_types.py  example_010_list_union_types.py
regression_tests/: conftest.py
scripts/: make_docs.py  run_regression_tests.sh
src/pydantic_typer/: __init__.py  main.py  utils.py
tests/: test_001_basic.py  test_002_nested_models.py  test_002_sub_models.py  test_003_annotated_argument.py  test_004_argument_override.py  test_005_multi_commands.py  test_006_pydantic_types.py
unit_tests/: test_006_pydantic_types.py
unit_tests/pydantic_models/: test_001_basic.py  test_002_nested_models.py  test_003_annotated_argument.py  test_004_argument_override.py  test_005_multi_commands.py
unit_tests/pydantic_types/: test_006_pydantic_types.py  test_007_list_pydantic_types.py  test_009_union_types.py
